# karakara

./: .gitignore  README.md  check.py  main.py  pyproject.toml  pytest.ini  sep.py  spl_parser.py  spl_parser_ai.py
samples/: Kana - つるぺったん sun3 Remix.lrc  a_cold_call.lrc  ashen.lrc  countdown_to_zero_luotianyi.lrc  family_mart_hatsune_miku_compressed.lrc  family_mart_hatsune_miku_orig.lrc  family_mart_hatsune_miku_transl.lrc  gentle_result.json  spark_for_dream.lrc  spl_export.json  test.lrc
scripts/: qwen3aligner_serve.py
src/karakara/: core.py  debug.py  gentle_client.py  kara_gen.py  logging.py  preprocess.py  spl_parser.py  stem_separator.py  typ.py  utils.py
src/karakara/aligner/: __init__.py  abc.py  gentle.py
src/karakara/aligner/gentle/: __init__.py  client.py  impl.py
src/karakara/aligner/q3fa/: __init__.py  client.py  impl.py
src/karakara/separator/: __init__.py  abc.py
src/karakara/separator/demucs/: __init__.py  impl.py
src/karakara/utils/: io.py  lang.py  metadata.py
tests/: test_line_parser.py
