[project]
name = "karakara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "av>=15.1.0",
    "demucs",
    "eval-type-backport>=0.3.0",
    "faster-whisper>=1.2.1",
    "funasr>=1.2.7",
    "numpy<2",
    "openai-whisper>=20250625",
    "pydantic>=2.12.4",
    "pypinyin>=0.55.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "typing-extensions>=4.15.0",
    "zhconv>=1.4.3",
]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_calls = true
strict_equality = true

[tool.uv.sources]
demucs = { git = "https://github.com/facebookresearch/demucs" }
torch = { index = "pytorch_cu118" }
torchaudio = { index = "pytorch_cu118" }
karakara = { workspace = true }


[[tool.uv.index]]
name = "cernet"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"

[[tool.uv.index]]
name = "pytorch_cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.workspace]
members = [
    ".",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "karakara",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "types-requests>=2.32.4.20250913",
]

[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
